Update to version 2.3

--- a/net/lynx/CHANGES
+++ b/net/lynx/CHANGES
@@ -1,4 +1,58 @@
-2-9-93
+5-19-94
+* Better memory allocation routines used for some VMS systems.
+5-19-94
+* Non-interactive (-source) access to documents requiring access authorization
+  not allowed to avoid crashes.
+3-30-94
+* Lynx exports the environment variable LYNX_VERSION on UNIX systems
+  with the current version number as the value.
+3-29-94
+* added "action=" handling to ISINDEX tags.  (Is that in the spec?)
+3-27-94
+* fixed Telnet security problem
+3-19-94
+* added .mailcap and mailcap support as well as mime.types support
+  for the configuration of viewers and extension mappings.
+  The test command is now implemented so that viewers can be conditionally
+  setup.
+3-17-94
+* Revamped the FTP code to recognize different server types and to parse
+  full directory listings (LIST output).  File types, sizes and dates
+  are displayed when possible.
+3-16-94
+* added transparent support for mosaic bookmark files.  Just point
+  Lynx at your existing default mosaic bookmark file and Lynx will
+  handle the rest.  Viewing, addition, and removal are supported.
+3-15-94
+* added second line of reverse video to show multiline links better.
+3-10-94
+* added configurable MIME types and viewers to lynx.cfg.  MIME types
+  and VIEWERS can be configured by following the instructions within
+  the newest lynx.cfg file.
+3-?-94
+* added second %s argument to PRINTER and DOWNLOADER definitions.
+  If a second %s is present in the command definition it will be
+  filled in by a suggested filename which is derived from the URL
+  of the document.  See lynx.cfg for more details.
+3-?-94
+* got code from CERN to fix HTBTree FTP bug.  Large ftp lists should
+  not crash anymore.
+3-9-94
+* added no_proxy environment variable.  set it to a comma delimited list
+  of domains or hosts that should not be proxyed. (Thanks CERN :)
+  USAGE: (UNIX)
+     setenv no_proxy "domain1.dom, domain2.dom, domain3, etc"
+3-?-94
+* Fixed Referer: field handleing so that it doesn't crash on really
+  long URL's
+3-?-94
+* True popup menus are now supported for non-multiple <select> lists.
+2-28-94
+* fixed the delete-a-bookmark command and bound it to 'r' for remove.
+  (thanks to David Trueman for the fix)
+
+---------- RELEASE of 2.2 ------------------
+2-9-94
 * added 'd' for download current link.  Can be used to force a download
   of any file.
 * 'r' removed as a comment key.  Use 'c' or reconfigure your keys to
@@ -17,23 +71,23 @@
      for interest, logging, etc. It allows bad links to be traced 
      for maintenance.
 
-2-8-93
+2-8-94
 * changed novice line to be displayed on bottom two lines with the
   status line moved up two lines.
-1-27-93
+1-27-94
 * Made configurable keymappings a reality.  Keys can be remapped in
   the lynx.cfg file.  (diffs from David Trueman)
 * Got code from Foteos to make 'a' work for VMS connection interrupts.
-1-24-93
+1-24-94
 * Moving closer towards configurable keymappings.  New keyhandleing
   code will make it very easy to implement. (diffs from David Trueman)
-1-14-93
+1-14-94
 * Lynx FTP now supports PASV code. (fixes to CERN (Dave Raggert?) PASV code
   from John Ellson)  It is not enabled by default.  Line 43 in
   WWW/Library/Implementation/HTFTP must be commented out for
   PASV code to be used.  This was done because not all FTP sites
   can support PASV FTP.
-1-13-93
+1-13-94
 * slight change in forms user interface.  For the better, I hope you will
   agree.  Text input fields are now active as soon as the cursor pointer
   is over them.  Therefore you may begin typing into the text field
