--- a/net/lynx/lynx.man
+++ b/net/lynx/lynx.man
@@ -62,17 +62,6 @@ servers, so that
 provides a truly distributed hypertext system.
 .PP
 .I Lynx 
-currently understands two hypertext data formats, the 
-.I Lynx 
-internal hypertext language and HyperText Markup Language (HTML).
-The perferred language is HTML and support for the 
-.I Lynx 
-internal language will
-be terminated in a subsequent release.  Documentation regarding the 
-.I Lynx
-intenal hypertext language and HTML are available online.
-.PP
-.I Lynx 
 is available for most flavors of Unix and VMS
 .PP
 This Un*x version of Lynx should work on any system with a reasonable 
@@ -150,7 +139,7 @@ Pressing '\\' again re-renders the document.
 
 
 .SH NOTES
-This is a Beta release of Lynx 2.0 for UN*X/VMS
+This is a Beta release of Lynx 2.x for UN*X/VMS
 .PP
 Thanks to Earl Fogel, Computing Services, University of Saskatchewan,
 fogel@sask.usask.ca, who wrote the original hytelnet code,
@@ -159,4 +148,4 @@ parts of the VMS code.
 
 .SH AUTHOR
 Lou Montulli, Computing Services, University of Kansas
-montulli@ukanaix.cc.ukans.edu
+lynx-help@ukanaix.cc.ukans.edu
