--- a/net/lynx/samples/README
+++ b/net/lynx/samples/README
@@ -1,6 +1,5 @@
-A new set of samples is under construction.
+To view the sample HTML file in this directory:
 
-For now you can browse the files by typing
    lynx start.html
       or
    ../lynx start.html
@@ -9,5 +8,5 @@ on VMS systems you will have to first define
 a logical similar to:
    lynx == "$users:[LYNX_DIRECTORY]lynx.exe"
 
-:lou
-montulli@ukanaix.cc.ukans.edu
+:Garrett
+lynx-help@ukanaix.cc.ukans.edu
