Wine 940620 - should work w/ 1.1R and -current.

--- a/util/wine/ChangeLog
+++ b/util/wine/ChangeLog
@@ -1,4 +1,582 @@
 ----------------------------------------------------------------------
+Mon Jun 20 14:26:41 1994  Bob Amstadt  (bob@pooh)
+
+	* [objects/bitmap.c]
+	Allow negative bitmap sizes.
+
+Sun Jun 19 12:00:04 1994  David Metcalfe <david@prism.demon.co.uk>
+
+        * [controls/edit.c]
+        Improved selection display.  Added processing for WM_SETFONT,
+        EM_REPLACESEL, EM_LINELENGTH, EM_UNDO, EM_EMPTYUNDOBUFFER,
+        EM_GETHANDLE, EM_SETHANDLE messages.  Text buffer now stored on 
+        application's local heap.
+
+        * [windows/graphics.c]
+        Corrected bug in Rectangle().  XFillRectangle has the same
+        width as Rectangle, but XDrawRectangle is one pixel wider
+        for the same co-ordinates.
+
+        * [memory/heap.c] [include/heap.h]
+        Added HEAP_LocalSize function.
+
+        * [windows/event.c] [windows/keyboard.c]
+        Improvements to KeyStateTable and addition of AsyncKeyStateTable.
+        Added supporting code to GetKeyState and GetAsyncKeyState and
+        merged mouse button states into GetKeyboardState.
+
+        * [loader/resource.c] [include/accel.h]
+        Added recognition of SHIFT, CONTROL and ALT keys to
+        TranslateAccelerator.
+
+        * [objects/metafile.c] [objects/font.c] [objects/bitblt.c]
+        A bit more metafile support.
+
+Sun Jun 19 17:29:00 MET DST 1994  Erik Bos (erik@hacktic.nl)
+
+        * [loader/resource.c]
+        SizeofResource() and AllocResource() added, AccessResource() updated.
+
+        * [if1632/kernel.spec]
+        FreeLibrary() used for FreeModule().
+
+        * [windows/graphics.c]
+        Rectangle(): swap left & right corners when right < left,
+        swap top & bottom when botton < top.
+
+Jun 19, 94 martin2@trgcorp.solucorp.qc.ca (Martin Ayotte)
+
+	* [controls/combo.c]
+	Fix bug in window style of the associated listbox.
+
+	* [controls/menu.c]
+	Skip separators in keyboard navigation by using new internal 
+		functions SelectPrevItem() & SelectNextItem(),
+
+	* [misc/profile.c]
+	Bug fix in GetPrivateProfileInt(), was limited to 4 digit,
+		IntBuf must be alloc to (5+1)=6. char instead of 5.
+
+	* [misc/main.c]
+	Put code in functions SetEnvironment() & GetEnvironment().
+
+	* [misc/shell.c]
+	Start putting some code in ExtractIcon() function.
+
+	* [misc/mmsystem.c]
+	Some code for MMTimer functions & timers list.
+
+	* [miscemu/int31.c]
+	Few stubs for DPMI interrupt calls. Nothing work yet.
+
+Mon Jun 20 07:37:43 EDT 1994	John Richardson (jrichard@cs.uml.edu)
+
+	* include/win.h (tagWND):
+	Added icon fields icon, hIcon and rectClientSave to 
+	the tagWND struct.
+
+	* windows/Imakefile
+	Added icon.c to the list of files to compile
+
+	* windows/dce.c (GetDCEx):
+	Added some checks for iconic mode and pass icon window as drawable,
+	not the real window.
+
+	* windows/defwnd.c (DefWindowProc)
+	Added PAINTICON default windows procedure.
+
+	* windows/event.c (EVENT_Expose)
+	Added check for iconic window expose. If iconic window is exposed
+	send a WM_PAINTICON message
+
+	* windows/icon.c 
+	New file.  ICON_Iconify, ICON_findIconFromPoint, ICON_Deiconify.
+
+	* windows/mdi.c (DefMDIChildProc)
+	Test for IsIconic during a SC_RESTORE, this doesn't work yet.
+
+	* windows/message.c (hardware_event)
+	Looks for icon as well as window now.
+
+	* windows/nonclient.c (NC_HandleSysCommand, NC_DoNCPaintIcon)
+	Added iconify/deiconify in NC_HandleSysCommand, new function
+	NC_DoNCPaintIcon which paints an icon.
+
+	* windows/painting.c (BeginPaint)
+	Made a BeginPaint select the STOCK_BLACK_PEN, STOCK_WHITE_BRUSH,
+	and STOCK_SYSTEM_FONT objects since this is (hopefully) default
+	windows behavior.
+
+	* windows/win.h (CreateWindowEx)
+	Set the default background color of a window to be white.
+	Create icon window, turn off MINIMIZE if it is on, since
+	I don't know what to do with it as of yet... register
+	the icon with the hwnd of its window so we can identify where
+	icon messages are coming from.
+
+Mon Jun 20 10:15:59 1994  Miguel de Icaza  (miguel@sphinx)
+
+	* windows/event.c: Added a hack to define XPointer when using
+	X11R4. 
+
+	* toolkit/hello.c: Test application for WineLib. To compile you'll
+	need: gcc -Iinclude -DWINELIB -g hello.c -c, and to link you'll
+	need: gcc hello.o libwine.a -lX11 -L/usr/openwin/lib -lm 
+
+	* toolkit/heap.c: Extended the size of the block size per chunk.
+
+	* misc/stress.c (GetFreeFileHandles): Fixed typo.
+
+	* misc/main.c (main): Changes to allow compilation under SunOS. 
+
+	* loader/library.c: Changed some ifdefs to compile WineLib.
+
+----------------------------------------------------------------------
+Tue Jun 14 08:09:14 1994  Bob Amstadt  (bob@pooh)
+
+	* loader/selector.c (GetCurrentPDB): 
+	Added trivial function GetCurrentPDB() which returns the program
+	segment prefix selector.
+
+	* memory/heap.c (HEAP_Free): 
+	If free list is empty, make the freed block the free list.
+
+Fri Jun 10 07:56:49 1994  Bob Amstadt  (bob@pooh)
+
+	* controls/edit.c (EDIT_SetTextMsg): 
+	Do not append a newline at the end of the last line.
+
+	* windows/event.c (SetCapture): 
+	Set winHasCursor if mouse capture succeeds.
+
+Jun 13, 94 martin2@trgcorp.solucorp.qc.ca (Martin Ayotte)
+
+	* [controls/listbox.c]
+	Fix bug in listbox : InsertString should call AddString if -1.
+
+	* [controls/menu.c]
+	New function GetMenuState().
+
+	* [controls/scroll.c] [windows/nonclient.c]
+	Try to make ShowScrollBar() recalc NC_ regions. Not finished !
+
+	* [objects/text.c]
+	Add Stub for TabbedTextOut(), which temporarely call Textout().
+
+	* [windows/keyboard.c] [windows/event.c]
+	New function GetKeyBoardState() with an KeyStateTable array
+		& associated handling in function EVENT_key().
+
+Mon Jun 13 16:45:24 MET DST 1994 (erik@hacktic.nl)
+
+        * [controls/menu.c]
+        IsMenu() added.
+
+        * [loader/library.c]
+        ModuleFirst(), ModuleNext(), ModuleFindName(), ModuleFindHandle()
+        added.
+
+        * [object/gdiobj.c]
+        IsGDIObject() added.
+
+        * [miscemu/int2[56].c]
+        bugfix: both didn't leave flags pushed on 16bit-stack.
+        (winfile gets a bit further)
+
+        * [miscemu/int16.c]
+        Added (empty).
+
+Sat Jun 11 22:56:48 1994 Jon Tombs (jon@esix2.us.es)
+	* windows/event.c:
+	Added code to drop redundant motion Events in the XEvent queue.
+
+Thu Jun  9 10:55:55 MET DST 1994  Jochen Hein ( Hein@Student.TU-Clausthal.de )
+
+	* [misc/main.c misc/message.c include/texts.h]
+	Removed the text-constants from message.c into variables
+	which may be changed from X-resources.
+
+	* [misc/main.c misc/message.c]
+	added <locale.h> and setlocale() to main.c, used toupper() in message.c
+
+Mon, 13 Jun 94 09:41:16 -0500 Paul Bramel <paulbr@comm.mot.com>
+
+        * controls/button.c ( [CR]B_LButton* ) 
+        left rc.right at full window width so click on label also 
+        activates the control (MSWin behavior)
+
+Sat Jun 11 19:05:40 1994  Olaf Flebbe  (flebbe@tat.physik.uni-tuebingen.de)
+
+        * include/windows.h:
+          functions pointers can not be packed.
+          (annoying warnings with forthcomming gcc-2.6.x)
+        
+        * loader/main.c (InitDLL): 
+          Fixed a printf statement. (for control.exe) 
+
+          (InitializeLoadedDLLs): 
+          deleted shadow definition of  *wpnt.
+          (Breaks many programs, because now COMMDLG will be
+           initialized :-(
+
+        * windows/win.c (SetWindowText): 
+          added missing breaks; (PENSATE starts) 
+
+        * windows/graphics.c (FloodFill): 
+          Proper boundarys. (BANGBANG starts) FloodFile_rec should
+          be rewritten.
+
+        * objects/font.c (FONT_GetMetrics): 
+          TYPO: use font->perchar only if it is defined. (WRITE starts)
+
+Sun June 12, Peter Broadhurst (pbr@ua.nwl.ac.uk)
+        controls/scroll.c:
+        Fixes for improved behaviour when dragging thumb;
+        Added SB_THUMBPOSITION message when thumb is released.
+
+----------------------------------------------------------------------
+Tue Jun  7 08:41:27 1994  Bob Amstadt  (bob@pooh)
+
+	* loader/selector.c (FixupFunctionPrologs): 
+	New function to fixup loaded DLL function prologs.  It replaces the
+	do nothing code with code that loads DS with the appropriate data
+	segment for the DLL.
+
+	* misc/cursor.c (LoadCursor): 
+	Disabled cursor loading from .EXE or .DLL.  The code needs to handle
+	the possibility of multiple cursors in a single directory.  Also,
+	it should check to see if the cursor is the right size.
+
+	* objects/font.c (EnumFonts): 
+	Checked for lpLogFontList[i] == NULL
+
+	* objects/gdiobj.c (SetObjectOwner): 
+	Removed stub.  Replaced with simple return in gdi.spec.  This
+	function is not defined for the retail version of Windows.
+
+	* memory/heap.c (WIN16_LocalHandleDelta): 
+	New function.  This is really a dummy that imitates the proper
+	return values.
+
+	* loader/library.c (GetProcAddress): 
+	Fixed definition of IS_BUILTIN_DLL() macro.
+
+Mon Jun  6 18:15:40 1994  Bob Amstadt  (bob@pooh)
+
+	* miscemu/int21.c (SeekFile): 
+	Needed to return current position in DX:AX.
+
+	* windows/utility.c (windows_wsprintf): 
+	Added support for '#' in format, and fixed bug with "ptr" being
+	incremented too many times.
+
+	* miscemu/int21.c (OpenExistingFile): 
+	Add code to handle opening files read-only and write-only.
+
+	* loader/wine.c:
+	Segment fixups now done in LoadImage instead of _WinMain.  This
+	is necessary to support LoadLibrary().
+
+Sun Jun  5 17:34:24 1994  Erik Bos (erik@hacktic.nl)
+
+	* [loader/*]
+		- fixed: GetModuleHandle() sometimes returned
+		  a wrong handle.
+		- don't init dlls when cs == 0 (lzexpand, doesn't
+		  seem to have a init function)
+		- LoadLibrary & LoadImage now return error instead
+		  of stopping wine.
+		- moved most of NE-functions into one file.
+		- LoadLibrary() uses w_files list instead of its
+		  own list.
+		- NE exectables are now fixed-up and initialised when
+		  loaded instead of only once before calling InitTask.
+
+	* [miscemu/int15.c] [miscemu/int31.c]
+	Added.	
+
+	* [loader/selector.c]
+	Stubs added for {Get|Set}SelectorLimit(), {Get|Set}SelectorBase().
+
+	* [misc/main.c]
+	Stub added for IsRomModule().
+
+	* [miscemu/int21.c]
+	Some cleanup, added heap for returning data.
+
+Jun 6, 94 martin2@trgcorp.solucorp.qc.ca (Martin Ayotte)
+
+	* [tools/build.c]
+	Change MAX_ORDINALS	define to higher value, 1299 entries.
+	(MMSYSTEM doesn't have succesive numbers, some are around 1200).
+
+	* [windows/utility.c]
+	Bug fix in windows_wsprintf(), (twice increments ...).
+
+	* [windows/winpos.c]
+	Bug fix in SetWindowPos(), redraw was done if flag
+		was set to SWP_NOREDRAW while SWP_SHOWWINDOW).
+
+	* [misc/message.c] [controls/combo.c]
+	Add an InvalidateRect() in WM_SHOWWINDOW to statisfy the new 'saveunder'.
+
+	* [windows/win.c]
+	In CreateWindowEx(), do SetMenu() calls after window creation,
+		just before sending to WM_NCCALCSIZE.
+
+	* [controls/menu.c]
+	In function SetMenu(), now use SetWindowPos() with 
+		flags SWP_FRAMECHANGED to readjust menu area.
+	Function MenuBarCalcSize() redone.
+
+Sun May 29 11:08:24 1994  David B. Thomas  (dt@yenta.abq.nm.us)
+
+        * [objects/text.c]
+        Fixed problems associated with DT_WORDBREAK flag.  String length
+        was not being properly decremented when lines were folded, and
+        wrapping was not performed when DT_NOCLIP and DT_NOPREFIX were
+        both on in addition to DT_WORDBREAK.  Windows does wrapping in
+        this case, and now so does wine.
+
+Sun Jun  5 19:17:49 1994  Olaf Flebbe  (olaf@dragon)
+
+        * [edit.c]
+        cp1 was uninitialized iff lineno == 0
+
+        *  FindFile tests for existance of file even if a full
+           filename was supplied. What about unix file names?
+
+        * [controls/listbox ]
+        wndPtr was uninitialized for LB_SETTOPINDEX
+
+        * [misc/property.c]     
+        Do not free lpProp. Is it really allocated by malloc?
+	{edited by Bob Amstadt: changed free() to GlobalFree()}
+
+----------------------------------------------------------------------
+Sat May 28 12:03:23 1994  Bob Amstadt  (bob@pooh)
+
+	* miscemu/int21.c (OpenExistingFile): 
+	OpenExistingFile needed to return handle in AX register instead
+	of the BX register.
+
+	* miscemu/int21.c (ioctlGetDeviceInfo): 
+	Added a little code to give a fake result for normal files.
+
+Wed May 25 21:55:38 1994  Bob Amstadt  (bob@pooh)
+
+	* [memory/global.c]
+	return value from GlobalSize was completely wrong.
+
+	* [miscemu/int21.h]
+	fixed bug in FindFirst.  Directory pointer (dp) was not placed in
+	dta correctly.
+
+	* [tools/build.c]
+	fixed creation of pop.h to guarantee that flags are restored correctly.
+
+	* [misc/comm.c]
+	changed all occurance of strncmp() to strncasecmp().
+	BuildCommDCB() should not require that OpenComm() be called first.
+
+	* [loader/selector.c]
+	Heap initialized to size of full segment less stack size and 
+	automatic data size.
+
+Sat May 28 09:14:33 1994  Rick Sladkey  (jrs@world.std.com)
+
+	* [controls/listbox.c]
+	Correct typos in ListBoxResetContent where lpls variable is
+	used where lsls2 variable is meant.  Don't call USER_HEAP_FREE
+	twice on the same handle if hData and hMem are the same.
+
+	* [debugger/opcodes/i386-dis.c]
+	Add new name array names_rmw for table driven decoding of the
+	16-bit mod/rm field.  Omit large case statement in OP_E and
+	replace with array reference to match existing coding style.
+	Add new static variable machine with value 286 or 386 to
+	correctly decode mod/rm field in either 16 or 32 bit modes.
+	Set it in print_insn_i{2,3}86.  In OP_E use it to decide how
+	to decode mod/rm.  While the code was correct for 16 bit code,
+	it was improperly decoding mod/rm fields on word prefixed
+	32 bit instructions.
+
+	* [debugger/debug.l]
+	Recognize new token ABORT.   Recognize single letters 'p'
+	and 'q' as tokens.
+
+	* [debugger/dbg.y]
+	Add new token ABORT.  Allow print command to be invoked by
+	'p' and quit command by 'q', ala GDB.  Change lots of '};'
+	to just '}'.  Add static dummy_regs to wine_debug so that
+	wine_debug(0, NULL) doesn't core dump with qmagic.
+
+	* [debugger/info.c]
+	Correct syntax of break command in helptext and omit former
+	comment about probable bugginess of the disassembly since it
+	is now correct.  Change fprintf of first backtrace stack
+	frame to match that of the second and subsequent frames.
+
+	* [loader/selector.c]
+	Change construction of command line in CreatePSP from creating
+	a string that looks like "arg1 arg2 \r" to "arg1 arg2".  A DOS
+	PSP command line looks like " arg1 arg2\r" with the length not
+	including the trailing "\r" but that is not how Windows does it.
+
+	* [loader/library.c]
+	Change uses of %s to print strings in GetModuleHandle to %x so
+	that string IDs don't cause a core dump with qmagic.  Handle
+	converting a string id to a literal module handle.  For
+	example, GetModuleHandle((LPSTR) 0x57) now returns 0x57 if
+	it is a real module handle.
+
+	* [misc/message.c]
+	In MessageBox, translate a NULL title argument to the string "Error".
+
+	* [misc/profile.c]
+	In GetSetProfile translate a NULL Default argument to "".  Any
+	caller whose Default argument is NULL is buggy, but CHARMAP does it
+	anyway.
+
+	* [objects/font.c]
+	Add NULL pointer checks in EnumFontFamilies to prevent core dumps.
+
+Sat May 28 20:01:51 1994 Jon Tombs (jon@gtex02.us.es) 
+
+	* New options/resourses nosaveunders and nobackingstore.  By 
+	default backingstore and saveunders are now enabled, these use 
+	more memory but avoids those slow (sometimes multiple) redraws 
+	caused be exposure events.
+
+May 30, 94 martin2@trgcorp.solucorp.qc.ca (Martin Ayotte)
+
+	* [misc/driver.c] New file
+	Skeleton for 'Installable Wine Drivers' functions. :-)
+	* [misc/audio.c] New file
+	Skeleton for basic 'Audio Driver' functions.
+	* [misc/network.c] New file
+	Stubs for few networking functions.
+
+	* [misc/mmsystem.c]
+	More coding ... a dust in a galaxy ...
+	* [misc/shell.c]
+	Some coding for 'RegXXX' functions ... a dust in the wind ...
+
+	* [misc/profile.c]
+	Bug fix in GetSetProfile(), bad enumeration if KeyName == NULL.
+
+	* [objects/gdi.c]
+	New function CreateDiscardableBitmap(), it just calling 
+	CreateCompatibleBitmap() for now. It's get 'clock.exe' running ! :-)
+
+	* [controls/listbox.c]
+	* [controls/combo.c]
+	New font member assigned to SYSTEM_FONT as default.
+	Added processing for WM_SETFONT message;
+
+
+Tue May 31 20:34:25 EDT 1994  John Richardson <jrichard@cs.uml.edu>
+
+        * [windows/event.c]
+        Added AsyncMouseButtonsStates array for GetAsyncKeyState.
+
+        * [windows/keyboard.c]
+        Implemented beginning of GetAsyncKeyState.
+
+Wed May 25 23:35:03 1994  David Metcalfe <david@prism.demon.co.uk>
+
+        * [objects/metafile.c] [include/metafile.h]
+          [windows/mapping.c] [objects/clipping.c] [objects/bitblt.c]
+          [windows/dc.c]
+        Further metafile support.
+
+----------------------------------------------------------------------
+Mon May 23 15:07:36 1994  Bob Amstadt  (bob@pooh)
+
+	* [loader/selector.c]
+	Allocate heap and stack segments as 64k.
+
+Sat May 21 01:15:49 1994  Rick Sladkey  (jrs@world.std.com)
+
+        * [loader/selector.c]
+        Correct typos where memcpy is used instead of memset.
+
+        * [loader/resource.c]
+        Allow for legitimate cases where biSizeImage is 0 in LoadIcon
+        by calculating the value when the bitmap is not compressed.
+
+        * [miscemu/int21.c]
+        Fix NULL dereference caused by superfluous DOS_closedir in FindNext.
+
+        * [loader/resource.c]
+        New function type_match to handle string resource types as
+        well as IDs.  In addition, compare only low 4 bits of type_id
+        when both numbers are IDs so that 0x0002 matches 0x8002.
+        In FindResourceByNumber and FindResourceByName use type_match
+        instead of comparing numbers.  In FindResource handle the
+        "#number" syntax and empty strings in both the resource and
+        type names.
+
+Mon May 23 00:48:25 1994  Rick Sladkey  (jrs@world.std.com)
+
+        * [windows/dialog.c]
+        Fix inadvertent printing of string IDs as strings.
+
+May 23, 94 martin2@trgcorp.solucorp.qc.ca (Martin Ayotte)
+
+	* [controls/menu.c]
+	New functions GetMenuItemCount(), GetMenuItemID().
+		GetMenuString() & HiliteMenuItem().
+	Bug fix in CheckMenuItem().
+	Function SetMenu() now make client area recalc if menu removed.
+
+	* [windows/winpos.c]
+	Bug fix in SetWindowPos(), no more XMapping or XConfiguring	of
+		windows with initial width or height equal zero.
+
+	* [objects/gdiobj.c]
+	New function EnumObjects(), using new lpPenBrushList buildup
+		from calls to new function GDI_AppendToPenBrushList().
+		('pbrush.exe' don't show its face yet ! ... :-( )
+	New EMPTY STUB for function SetObjectOwner(),
+		('mplayer.exe' call it via GetProcAddress() ...)
+
+	* [objects/font.c]
+	New internal functions ParseFontParms() & InitFontsList().
+	EnumFonts() & EnumFontFamilies() enumerates fonts (no more dummies).
+	FONT_MatchFont now make retries to find closest-smallest font.
+		('charmap.exe' can now show the differents fonts available)
+
+	* [windows/nonclient.c]
+	Use small dos OBM_OLD_CLOSE button for MDI windows.
+
+	* [windows/graphics.c] [objects/bitmap.c]
+	Start to remove obsolete globals such XT_screen ...
+
+	* [loader/library.c]
+	Make function GetProcAddress() working also with builtin DLLs.
+
+Tue May 24 20:18:02 1994  Erik Bos (erik@hacktic.nl)
+
+        * [if1632/system.spec] [if1632/toolhelp.spec]
+        system.dll & toolhelp.dll added.
+
+        * [loader/library.c]
+        Modified GetModuleFileName() to return the full
+        filename.
+        Added a check to LoadLibrary() to prevent loading
+        built in dlls. (eg. user.exe)
+        Added a check to FreeLibrary() to prevent built-in
+        dlls from being freed.
+        Modified GetProcAddress() to support builtin dlls.
+
+        * [loader/signal.c] [miscemu/int2f.c]
+        Added => pifedit runs.
+
+        * [misc/dos_fs.c]
+        Added a NULL-ptr check to DOS_closedir().
+
+----------------------------------------------------------------------
 Tue May 17 23:03:16 1994  Bob Amstadt  (bob@pooh)
 
 	* [windows/dce.c]
