--- a/shell/tcsh/README
+++ b/shell/tcsh/README
@@ -1,17 +1,14 @@
-This is tcsh version 6.04.  Tcsh is a version of the Berkeley
+This is tcsh version 6.05.  Tcsh is a version of the Berkeley
 C-Shell, with the addition of: a command line editor, command and file
 name completion, listing, etc. and a bunch of small additions to the
 shell itself.
 
-Tcsh runs on BSD 4.2 and 4.3 Unix, Mach, Sun Unix (tested on 3.0, 3.2,
-3.4, 4.0, 4.1.x), Pyramid OS/X (in the bsd universe), Encore UMAX 4.2,
-Apple A/UX 2.0, AT&T 3b machines under SysV.2 and V.3, HP/UX 6.2 on
-series 300 and 800 machines and all HP machines under HP/UX 6.5, 7.0
-and 8.0 and will probably work with a bit of tinkering on anything else
-either BSD or SysV-ish. It also runs under VMS/POSIX and OS/2+emx.
-Note that the above list is incomplete, and the place to look is the
-config directory to find a configuration file
-appropriate for your machine.
+Tcsh has been ported to most unix variants, and can be tinkered to work
+in unix systems that it has not ported yet. See the Ported file for
+a more complete list of ported systems and in the config directory for
+a configuration file that matches your system.
+Tcsh also runs under VMS/POSIX and OS/2+emx; the OS/2 port is not
+complete yet.
 
 Feel free to use it.  These changes to csh may only be included in a
 commercial product if the inclusion or exclusion does not change the
@@ -22,17 +19,18 @@ names of the authors from the source code or documentation).
 
 To install tcsh:
 
-0)  If you are using imake, try xmkmf. Otherwise copy Makefile.std to
-    Makefile.
+0)  If you are using imake, try xmkmf and goto step 3.
+    If imake does not work, copy Makefile.std to Makefile.
 
 1)  Look at the Makefile and make sure that you are using the right
     compilation flags.
 
 2)  Copy the appropriate for your machine and OS config file from the
-    config subdirectory into config.h. If you are trying to compile
-    tcsh on a machine for which there is no config file yet, you will
-    need to create a config file using as a template one of the
-    supplied ones.  If you get tcsh working on a new machine, I'd
+    config subdirectory into config.h.  Consult the file "Ported" for
+    settings known to work on various machines.  If you are trying to
+    compile tcsh on a machine for which there is no config file yet,
+    you will need to create a config file using as a template one of
+    the supplied ones.  If you get tcsh working on a new machine, I'd
     appreciate a copy of the config file plus additional information
     about the architecture/OS.  If you are creating a new config file,
     look very hard at BSDJOBS, BSDSIGS, and BSDTIMES if you are running
@@ -41,16 +39,16 @@ To install tcsh:
     in the UCB universe even if you are running under the ATT universe
     usually; it will work anyway, and you get job control for free.
 
-
 3)  Look at config_f.h, and enable or disable any features you want.
     It is configured the way I like it, but you may disagree.
     If you do not have NLS, then locale.h will not be found. Undefine it
     and things should work ok. On the other hand, if you have NLS you
     might as well use it...
 
-4)  Look at tc.vers.c to make sure that you have the right #ifdefs to set
-    the environment variable "HOSTTYPE" correctly.  If you need to make
-    changes, PLEASE SEND THEM BACK TO ME.
+4)  Look at host.defs to make sure that you have the right defines to set
+    the environment variables "HOSTTYPE", "MACHTYPE", "OSTYPE" and 
+    "VENDOR" correctly.  If you need to make changes, PLEASE SEND THEM 
+    BACK TO ME.
 
 5)  You may want to adjust the DESTDIR and DESTMAN entries in the
     Makefile.  These are the directories that tcsh, and the tcsh.1 man
@@ -61,7 +59,9 @@ To install tcsh:
 6)  make
 
 7)  Read the documentation while you are waiting.  The file tcsh.man
-    is in standard [nt]roff -man format.
+    is in standard [nt]roff -man format. If you like, you can run the
+    tcsh.man2html script (requires Perl) to generate an HTML version of
+    the manpage which you can read with Mosaic, lynx or other HTML browser.
 
 8)  Test tcsh to see that it has compiled correctly.  The history
     command should give a time stamp on every entry.  Typing normal
@@ -132,7 +132,7 @@ Tcsh has been ported to minix by  Scott Krotz (krotz@honey.rtsg.mot.com).
 Unfortunately the minix sed is broken, so you'll have to find a way to
 make tc.const.h, sh.err.h, ed.defns.h which are automatically generated.
 The easiest way to create them is to make a copy from unix, copying 
-config.minix to config.h, and then 'make sh.err.h tc.const.h ed.defns.h'
+minix to config.h, and then 'make sh.err.h tc.const.h ed.defns.h'
 
 The OS/dependent files are in mi.termios.h, mi.wait.h, mi.varargs.h
 
