--- a/shell/tcsh/FAQ
+++ b/shell/tcsh/FAQ
@@ -1,6 +1,6 @@
 
 Last Updated: 
-Sun May 16 20:08:16 EDT 1993
+Mon Apr 18 01:41:44 EDT 1994
 
 This is for people who do not read the manual!
 
@@ -47,6 +47,9 @@ be able to get ftp it... :-)
     or
     /usr/etc/setsid dbxtool &
 
+    If that does not work, for dbxtool at least you can add "sh stty sane"
+    in your .dbxinit
+
 3.  I tried to compile tcsh and it cannot find <locale.h>?
 
     Your system does not support NLS. Undefine NLS in config_f.h and it
@@ -64,7 +67,8 @@ be able to get ftp it... :-)
     shells is either hardcoded or it is usually in a file called
     /etc/shells. If it is hard-coded, then you are out of luck and
     your best bet is to get a newer version of ftpd. Otherwise add
-    tcsh to the list of shells. Remember that the full path is required.
+    tcsh to the list of shells. [For AIX this file is called 
+    /etc/security/login.cfg]. Remember that the full path is required.
     If there is no /etc/shells, and you are creating one, remember to
     add /bin/csh, /bin/sh, and any other valid shells for your system,
     so that other people can ftp too :-)
@@ -164,6 +168,15 @@ be able to get ftp it... :-)
 
     This is another manifestation of item 5. Just add the pathname
     to tcsh in /etc/shells and everything should work fine.
+
+16. On machines that use YP (NIS) tilde expansion might end up in /dev/null
+    If this happens complain to your vendor, to get a new version of NIS.
+    You can fix that in tcsh by defining YPBUGS in config.h
+
+17. Script on SGI 4.0.5 does not give us a tty, so we cannot have job
+    control. Their csh does not have job control either. Try:
+	% script
+	% cat > /dev/tty
 
 christos
 
